location, map and country fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,13 @@ body,
   color: "#141414";
 }
 
+.leaflet-bottom,
+.leaflet-control,
+.leaflet-pane,
+.leaflet-top {
+  z-index: 0 !important;
+}
+
 @layer utilities {
   @variants responsive {
     /* Hide scrollbar for Chrome, Safari and Opera */
