--- a/app/globals.css
+++ b/app/globals.css
@@ -30,3 +30,10 @@ body,
     }
   }
 }
+
+@layer base {
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+  }
+}
