--- a/app/globals.css
+++ b/app/globals.css
@@ -35,3 +35,12 @@ body,
     -webkit-appearance: none;
   }
 }
+
+.rdrMonth {
+  width: 100% !important;
+}
+
+.rdrCalendarWrapper {
+  font-size: 16px !important;
+  width: 100% !important;
+}
